# rs-ynab-importer

./: Cargo.toml  README.md  example.xml
.github/: dependabot.yml
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: main.rs
camt053_parser/: Cargo.toml
camt053_parser/src/: lib.rs  model.rs
camt053_parser/tests/: parse_camt_053_test.rs
common/src/: lib.rs
file_system/src/: file_reader.rs  lib.rs  list_files.rs
output_tracker/: Cargo.toml
output_tracker/src/: lib.rs
resources/: example.csv  example.xml
ynab_csv/: Cargo.toml
ynab_csv/src/: lib.rs
ynab_importer/: Cargo.toml
ynab_importer/src/: lib.rs  main.rs
ynab_importer/tests/: parse_camt_053_test.rs
