[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camt053_parser = { path = "../camt053_parser" }
thiserror = "1.0.67"
clap = { version = "4.5.40", features = ["derive"] }
ynab_csv = { path = "../ynab_csv" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.25"
home = "0.5.11"
regex = "1.10.6"
