[package]
name = "camt053_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
quick-xml = { version = "0.36.2", features = [ "serialize" ] }
serde = { version = "1.0.215", features = [ "derive" ] }
serde-xml-rs = "0.6.0"
thiserror = "2.0.3"

