[package]
name = "ynab_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
output_tracker = { path = "../output_tracker" }
csv = "1.2.2"
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.62"
