[package]
name = "ynab_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
output_tracker = { path = "../output_tracker" }
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "1.0.67"
